fixed responsiveness issue on mobile devices

--- a/app/styles/_filters.scss
+++ b/app/styles/_filters.scss
@@ -106,6 +106,15 @@
       padding-top: 3%;
       padding-bottom: 3%;
       margin-bottom: 2%;
+      width: 45%;
+
+      @media #{$small-only} {
+        width: 45%;
+      }
+
+      @media #{$medium-only} {
+        width: 42%;
+      }
 
       &.enabled {
         background-color: #F34D4F;
